--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,11 @@
         <item name="android:focusable">true</item>
     </style>
 
+    <style name="FullScreenDialogMM" parent="AppTheme">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:colorBackground">@color/blackTransparent</item>
+    </style>
+
     <style name="AlertDialogStyleMM" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:textColorPrimary">@color/grayMM</item>
         <item name="android:background">@color/white</item>
@@ -61,7 +66,39 @@
         <item name="android:includeFontPadding">true</item>
     </style>
 
-    <style name="ButtonHandAction" parent="RippleEffect">
+    <style name="TextViewTableSeatSmall" parent="AppTheme">
+        <item name="android:textColor">@color/grayMM</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:includeFontPadding">true</item>
+    </style>
+
+    <style name="TextViewTableSeatMedium" parent="AppTheme">
+        <item name="android:textColor">@color/grayMM</item>
+        <item name="android:gravity">center</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:includeFontPadding">true</item>
+    </style>
+
+    <style name="ButtonHandActionSmall" parent="RippleEffect">
+        <item name="android:elevation">8dp</item>
+        <item name="android:background">@drawable/button_rounded_corners_green</item>
+        <item name="android:paddingStart">@dimen/standard_and_half_margin</item>
+        <item name="android:paddingEnd">@dimen/standard_and_half_margin</item>
+        <item name="android:paddingTop">@dimen/half_standard_margin</item>
+        <item name="android:paddingBottom">@dimen/half_standard_margin</item>
+        <item name="android:layout_marginTop">@dimen/standard_and_half_margin</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="ButtonHandActionBig" parent="RippleEffect">
         <item name="android:elevation">8dp</item>
         <item name="android:background">@drawable/button_rounded_corners_green</item>
         <item name="android:paddingTop">@dimen/standard_and_half_margin</item>
