--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="colorAccent">#ff4e95</color>
 
     <color name="whiteTransparent">#88FFFFFF</color>
+    <color name="blackTransparent">#BB000000</color>
 
     <color name="white">#FFF</color>
     <color name="grayLight">#EEE</color>
