--- a/app/src/main/res/layout/game_action_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_action_dialog_fragment.xml
@@ -20,6 +20,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    tools:background="@color/blackTransparent"
     android:orientation="vertical"
     android:paddingStart="@dimen/fourth_standard_margin"
     android:paddingTop="@dimen/standard_margin"
@@ -45,6 +46,19 @@
         android:gravity="center_horizontal"
         android:textColor="@color/white"
         tools:text="Player name" />
+
+    <TextView
+        android:id="@+id/tvGameHuDialogDiscarderText"
+        style="@style/diffsDialogCell"
+        android:layout_marginTop="@dimen/standard_margin"
+        android:text="@string/points_needed" />
+
+    <include
+        android:id="@+id/iHandActionsDialogDiffs"
+        layout="@layout/game_action_dialog_diffs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/half_standard_margin" />
 
     <LinearLayout
         android:id="@+id/btHandActionsDialogHu"
@@ -75,6 +89,7 @@
     <LinearLayout
         android:id="@+id/btHandActionsDialogDraw"
         style="@style/ButtonHandActionSmall"
+        android:background="@drawable/button_rounded_corners_accent"
         tools:ignore="UseCompoundDrawables">
 
         <ImageView
@@ -99,6 +114,7 @@
     <LinearLayout
         android:id="@+id/btHandActionsDialogPenalty"
         style="@style/ButtonHandActionSmall"
+        android:background="@drawable/button_rounded_corners_purple"
         tools:ignore="UseCompoundDrawables">
 
         <ImageView
