--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -137,12 +137,23 @@
         <item name="android:layout_centerHorizontal">true</item>
     </style>
 
-    <style name="diffsCell" parent="AppTheme">
+    <style name="diffsGameCell" parent="AppTheme">
         <item name="android:layout_width">@dimen/standard_and_quarter_margin</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">10sp</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="diffsDialogCell" parent="AppTheme">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/quarter_standard_margin</item>
+        <item name="android:lines">1</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
