Added diffs calcs toggling options

--- a/app/src/main/res/layout/game_action_dialog_diffs.xml
+++ b/app/src/main/res/layout/game_action_dialog_diffs.xml
@@ -10,7 +10,8 @@
 
         <TextView
             style="@style/diffsDialogCell"
-            android:text="@string/to_be_by"/>
+            android:text="@string/to_be_by"
+            android:textStyle="normal" />
 
         <TextView
             style="@style/diffsDialogCell"
