--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -14,17 +14,14 @@
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_rotate_seats"
         android:icon="@drawable/ic_rotation_down"
         android:title="@string/rotate_seats"
-        android:iconTint="@color/white"
-        app:showAsAction="ifRoom"
-        tools:targetApi="o" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_combinations"
@@ -34,22 +31,29 @@
 
     <item
         android:id="@+id/action_players"
-        android:icon="@drawable/ic_people_white_24dp"
         android:title="@string/edit_names"
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_show_diffs_calcs"
+        android:title="@string/show_diffs_calcs"
+        android:visible="false"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_hide_diffs_calcs"
+        android:title="@string/hide_diffs_calcs"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_resume_game"
-        android:icon="@drawable/ic_play_arrow_white_24px"
         android:title="@string/resume"
         android:visible="false"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_end_game"
-        android:icon="@drawable/ic_stop_white_24dp"
         android:title="@string/end"
-        android:visible="true"
         app:showAsAction="never" />
 
 </menu>
