--- a/app/src/main/res/drawable/shape_rounded_corners_gray.xml
+++ b/app/src/main/res/drawable/shape_rounded_corners_gray.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="8dp" />
-    <solid android:color="@color/grayLight" />
+    <solid android:color="@color/gray" />
 
 </shape>
