--- a/app/src/main/res/layout/combination_item.xml
+++ b/app/src/main/res/layout/combination_item.xml
@@ -19,7 +19,7 @@
     android:id="@+id/llCombinationItemContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/grayLight">
+    tools:background="@color/gray">
 
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/cvCombinationItem"
@@ -32,14 +32,14 @@
         android:layout_marginRight="@dimen/half_standard_margin"
         android:layout_marginBottom="@dimen/quarter_standard_margin"
         android:minHeight="@dimen/combination_item_cardview_min_height"
-        card_view:cardBackgroundColor="@color/white"
+        card_view:cardBackgroundColor="@color/grayLight"
         card_view:cardCornerRadius="@dimen/cardCornerRadius">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
-            android:background="@color/white"
+            android:background="@color/grayLight"
             android:orientation="vertical"
             android:paddingTop="@dimen/half_standard_margin"
             android:paddingBottom="@dimen/half_standard_margin">
