--- a/app/src/main/res/layout/game_action_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_action_dialog_fragment.xml
@@ -19,151 +19,174 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:background="@color/blackTransparent"
     android:gravity="center"
-    android:orientation="vertical"
-    android:paddingStart="@dimen/fourth_standard_margin"
-    android:paddingTop="@dimen/standard_margin"
-    android:paddingEnd="@dimen/fourth_standard_margin"
-    android:paddingBottom="@dimen/standard_margin"
-    tools:background="@color/blackTransparent">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/ivHandActionsDialogPlayerSeatWind"
-        style="@style/TextViewTableSeat"
-        android:layout_width="@dimen/second_standard_margin"
-        android:layout_height="@dimen/second_standard_margin"
-        android:gravity="center_horizontal"
-        android:textColor="@color/white"
-        app:tint="@color/white"
-        tools:ignore="ContentDescription"
-        tools:src="@drawable/ic_east" />
-
-    <TextView
-        android:id="@+id/tvHandActionsDialogPlayerName"
-        style="@style/TextViewTableSeat"
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textColor="@color/white"
-        tools:text="Player name" />
+        android:layout_margin="@dimen/second_standard_margin"
+        app:cardBackgroundColor="@color/grayLight"
+        app:cardCornerRadius="@dimen/half_standard_margin"
+        app:cardMaxElevation="8dp"
+        app:contentPadding="@dimen/second_standard_margin">
 
-    <TextView
-        android:id="@+id/tvHandActionsDialogDiffsTitle"
-        style="@style/diffsDialogCell"
-        android:layout_marginTop="@dimen/standard_margin"
-        android:text="@string/points_needed"
-        android:textStyle="normal" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <include
-        android:id="@+id/iHandActionsDialogDiffs"
-        layout="@layout/game_action_dialog_diffs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/half_standard_margin" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/standard_margin"
+                android:paddingBottom="@dimen/standard_margin">
 
-    <LinearLayout
-        android:id="@+id/btHandActionsDialogHu"
-        style="@style/ButtonHandActionBig"
-        tools:ignore="UseCompoundDrawables">
+                <ImageView
+                    android:id="@+id/ivHandActionsDialogPlayerSeatWind"
+                    style="@style/TextViewTableSeat"
+                    android:layout_width="@dimen/second_standard_margin"
+                    android:layout_height="@dimen/second_standard_margin"
+                    android:gravity="center_horizontal"
+                    android:textColor="@color/white"
+                    app:tint="@color/grayMM"
+                    tools:ignore="ContentDescription"
+                    tools:src="@drawable/ic_east" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/half_and_quarter_standard_margin"
-            android:layout_marginBottom="@dimen/quarter_standard_margin"
-            android:importantForAccessibility="no"
-            android:src="@drawable/ic_trophy_white_18dp" />
+                <TextView
+                    android:id="@+id/tvHandActionsDialogPlayerName"
+                    style="@style/TextViewTableSeat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:textColor="@color/grayMM"
+                    tools:text="Player name" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/half_and_quarter_standard_margin"
-            android:lines="1"
-            android:text="@string/mahjong"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="21sp"
-            android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/tvHandActionsDialogDiffsTitle"
+                    style="@style/diffsDialogCell"
+                    android:layout_marginTop="@dimen/standard_margin"
+                    android:text="@string/points_needed"
+                    android:textStyle="normal" />
 
-    </LinearLayout>
+                <include
+                    android:id="@+id/iHandActionsDialogDiffs"
+                    layout="@layout/game_action_dialog_diffs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/half_standard_margin" />
 
-    <LinearLayout
-        android:id="@+id/btHandActionsDialogDraw"
-        style="@style/ButtonHandActionSmall"
-        android:background="@drawable/button_rounded_corners_accent"
-        tools:ignore="UseCompoundDrawables">
+                <LinearLayout
+                    android:id="@+id/btHandActionsDialogHu"
+                    style="@style/ButtonHandActionBig"
+                    tools:ignore="UseCompoundDrawables">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/quarter_standard_margin"
-            android:importantForAccessibility="no"
-            android:src="@drawable/ic_flag_white" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/half_and_quarter_standard_margin"
+                        android:layout_marginBottom="@dimen/quarter_standard_margin"
+                        android:importantForAccessibility="no"
+                        android:src="@drawable/ic_trophy_white_18dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:lines="1"
-            android:text="@string/draw"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="21sp"
-            android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/half_and_quarter_standard_margin"
+                        android:lines="1"
+                        android:text="@string/mahjong"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="21sp"
+                        android:textStyle="bold" />
 
-    </LinearLayout>
+                </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/btHandActionsDialogPenalty"
-        style="@style/ButtonHandActionSmall"
-        android:background="@drawable/button_rounded_corners_purple"
-        tools:ignore="UseCompoundDrawables">
+                <LinearLayout
+                    android:id="@+id/btHandActionsDialogDraw"
+                    style="@style/ButtonHandActionSmall"
+                    android:background="@drawable/button_rounded_corners_accent"
+                    tools:ignore="UseCompoundDrawables">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/quarter_standard_margin"
-            android:importantForAccessibility="no"
-            android:src="@drawable/ic_penalty_white" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/quarter_standard_margin"
+                        android:importantForAccessibility="no"
+                        android:src="@drawable/ic_flag_white" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:lines="1"
-            android:text="@string/penalty"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:lines="1"
+                        android:text="@string/draw"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="21sp"
+                        android:textStyle="bold" />
 
-    </LinearLayout>
+                </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/btHandActionsDialogPenaltiesCancel"
-        style="@style/ButtonHandActionSmall"
-        android:layout_marginTop="@dimen/second_standard_margin"
-        android:background="@drawable/button_rounded_corners_purple"
-        android:visibility="gone"
-        tools:ignore="UseCompoundDrawables"
-        tools:visibility="visible">
+                <LinearLayout
+                    android:id="@+id/btHandActionsDialogPenalty"
+                    style="@style/ButtonHandActionSmall"
+                    android:background="@drawable/button_rounded_corners_purple"
+                    tools:ignore="UseCompoundDrawables">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/quarter_standard_margin"
-            android:importantForAccessibility="no"
-            android:src="@drawable/ic_penalty_white" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/quarter_standard_margin"
+                        android:importantForAccessibility="no"
+                        android:src="@drawable/ic_penalty_white" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:maxLines="2"
-            android:text="@string/cancel_penalties"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:lines="1"
+                        android:text="@string/penalty"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
-    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/btHandActionsDialogPenaltiesCancel"
+                    style="@style/ButtonHandActionSmall"
+                    android:layout_marginTop="@dimen/second_standard_margin"
+                    android:background="@drawable/button_rounded_corners_purple"
+                    android:visibility="gone"
+                    tools:ignore="UseCompoundDrawables"
+                    tools:visibility="visible">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/quarter_standard_margin"
+                        android:importantForAccessibility="no"
+                        android:src="@drawable/ic_penalty_white" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:maxLines="2"
+                        android:text="@string/cancel_penalties"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </ScrollView>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
