--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -58,7 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/ablGame"
-            android:background="@color/white" />
+            android:background="@color/grayLight" />
 
     </RelativeLayout>
 
