--- a/app/src/main/res/layout/game_hu_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_hu_dialog_fragment.xml
@@ -14,129 +14,139 @@
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="@dimen/half_standard_margin"
-    app:cardMaxElevation="8dp"
-    app:contentPadding="@dimen/standard_margin">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:background="@color/blackTransparent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="false"
-        android:focusable="false"
-        android:gravity="center_horizontal"
-        android:padding="@dimen/standard_margin">
+        android:layout_margin="@dimen/second_standard_margin"
+        app:cardBackgroundColor="@color/grayLight"
+        app:cardCornerRadius="@dimen/half_standard_margin"
+        app:cardMaxElevation="8dp"
+        app:contentPadding="@dimen/second_standard_margin">
 
-        <TextView
-            android:id="@+id/tvGameHuDialogWinnerText"
+        <ScrollView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="@string/winner_"
-            android:textColor="@color/grayMM" />
+            android:layout_height="wrap_content">
 
-        <include
-            android:id="@+id/iGameHuDialogWinnerContainer"
-            layout="@layout/table_seat_medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvGameHuDialogWinnerText"
-            android:layout_centerHorizontal="true" />
-
-        <View
-            android:id="@+id/vGameHuDialogSeparator1"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@+id/iGameHuDialogWinnerContainer"
-            android:layout_marginTop="@dimen/half_and_quarter_standard_margin"
-            android:layout_marginBottom="@dimen/half_and_quarter_standard_margin"
-            android:background="@color/grayLight" />
-
-        <TextView
-            android:id="@+id/tvGameHuDialogDiscarderText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/vGameHuDialogSeparator1"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="@dimen/half_standard_margin"
-            android:layout_marginTop="@dimen/half_standard_margin"
-            android:layout_marginEnd="@dimen/half_standard_margin"
-            android:layout_marginBottom="@dimen/half_standard_margin"
-            android:text="@string/discarder_"
-            android:textColor="@color/grayMM" />
-
-        <com.etologic.mahjongscoring2.app.custom_views.CustomDiscarderSelector
-            android:id="@+id/cdsGameHuDialog"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvGameHuDialogDiscarderText"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="@dimen/half_standard_margin"
-            android:layout_marginTop="@dimen/half_standard_margin"
-            android:layout_marginEnd="@dimen/half_standard_margin"
-            android:layout_marginBottom="@dimen/half_standard_margin" />
-
-        <View
-            android:id="@+id/vGameHuDialogSeparator2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@+id/cdsGameHuDialog"
-            android:layout_marginTop="@dimen/half_and_quarter_standard_margin"
-            android:layout_marginBottom="@dimen/half_and_quarter_standard_margin"
-            android:background="@color/grayLight" />
-
-        <TextView
-            android:id="@+id/tvGameHuDialogPointsText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/vGameHuDialogSeparator2"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/half_standard_margin"
-            android:text="@string/points_"
-            android:textColor="@color/grayMM" />
-
-        <com.etologic.mahjongscoring2.app.custom_views.CustomNumPad
-            android:id="@+id/cnpGameHuDialog"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvGameHuDialogPointsText"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/cnpGameHuDialog"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="@dimen/standard_margin"
-            android:gravity="end">
-
-            <Button
-                android:id="@+id/btGameHuDialogCancel"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/standard_margin"
-                android:text="@string/cancel"
-                android:textColor="@color/colorAccent" />
+                android:gravity="center_horizontal">
 
-            <Button
-                android:id="@+id/btGameHuDialogOk"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/standard_margin"
-                android:text="@string/ok"
-                android:textColor="@color/colorAccent" />
+                <TextView
+                    android:id="@+id/tvGameHuDialogWinnerText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/winner_"
+                    android:textColor="@color/grayMM" />
 
-        </LinearLayout>
+                <include
+                    android:id="@+id/iGameHuDialogWinnerContainer"
+                    layout="@layout/table_seat_medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvGameHuDialogWinnerText"
+                    android:layout_centerHorizontal="true" />
 
-    </RelativeLayout>
+                <View
+                    android:id="@+id/vGameHuDialogSeparator1"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/iGameHuDialogWinnerContainer"
+                    android:layout_marginTop="@dimen/standard_margin"
+                    android:layout_marginBottom="@dimen/half_and_quarter_standard_margin"
+                    android:background="@color/gray" />
 
-</androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/tvGameHuDialogDiscarderText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/vGameHuDialogSeparator1"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="@dimen/half_standard_margin"
+                    android:layout_marginTop="@dimen/half_standard_margin"
+                    android:layout_marginEnd="@dimen/half_standard_margin"
+                    android:layout_marginBottom="@dimen/half_standard_margin"
+                    android:text="@string/discarder_"
+                    android:textColor="@color/grayMM" />
+
+                <com.etologic.mahjongscoring2.app.custom_views.CustomDiscarderSelector
+                    android:id="@+id/cdsGameHuDialog"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvGameHuDialogDiscarderText"
+                    android:layout_marginTop="@dimen/half_standard_margin"
+                    android:layout_marginBottom="@dimen/half_standard_margin" />
+
+                <View
+                    android:id="@+id/vGameHuDialogSeparator2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/cdsGameHuDialog"
+                    android:layout_marginTop="@dimen/half_and_quarter_standard_margin"
+                    android:layout_marginBottom="@dimen/half_and_quarter_standard_margin"
+                    android:background="@color/gray" />
+
+                <TextView
+                    android:id="@+id/tvGameHuDialogPointsText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/vGameHuDialogSeparator2"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/half_standard_margin"
+                    android:text="@string/points_"
+                    android:textColor="@color/grayMM" />
+
+                <com.etologic.mahjongscoring2.app.custom_views.CustomNumPad
+                    android:id="@+id/cnpGameHuDialog"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvGameHuDialogPointsText"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/cnpGameHuDialog"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="@dimen/standard_margin"
+                    android:gravity="end">
+
+                    <Button
+                        android:id="@+id/btGameHuDialogCancel"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/standard_margin"
+                        android:text="@string/cancel"
+                        android:textColor="@color/colorAccent" />
+
+                    <Button
+                        android:id="@+id/btGameHuDialogOk"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/standard_margin"
+                        android:text="@string/ok"
+                        android:textColor="@color/colorAccent" />
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+        </ScrollView>
+
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
