--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/white"
+        android:background="@color/grayLight"
         app:headerLayout="@layout/main_drawer_header"
         app:itemIconTint="@color/grayMM"
         app:itemTextColor="@color/grayMM"
