--- a/app/src/main/res/layout/main_oldgames_fragment.xml
+++ b/app/src/main/res/layout/main_oldgames_fragment.xml
@@ -19,7 +19,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/grayLight"
     tools:context=".app.main.old_games.OldGamesFragment"
     tools:ignore="Overdraw">
 
@@ -57,7 +57,7 @@
                 android:id="@+id/rvOldGames"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/grayLight"
+                android:background="@color/gray"
                 android:scrollbarStyle="insideOverlay"
                 android:scrollbars="vertical"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
@@ -66,7 +66,7 @@
                 android:id="@+id/emptyLayoutOldGames"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
+                android:background="@color/grayLight"
                 android:clickable="true"
                 android:focusable="true"
                 android:gravity="center"
