--- a/app/src/main/res/layout/custom_num_pad.xml
+++ b/app/src/main/res/layout/custom_num_pad.xml
@@ -20,8 +20,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:gravity="center"
-    android:orientation="vertical"
-    android:padding="@dimen/standard_margin">
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/etCustomNumPadDisplay"
