--- a/app/src/main/res/layout/game_hu_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_hu_dialog_fragment.xml
@@ -113,35 +113,33 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvGameHuDialogPointsText"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/standard_margin"
+                    android:layout_marginBottom="@dimen/standard_margin"
                     android:layout_gravity="center" />
 
-                <LinearLayout
+                <Button
+                    android:id="@+id/btGameHuDialogCancel"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/cnpGameHuDialog"
-                    android:layout_alignParentEnd="true"
                     android:layout_marginTop="@dimen/standard_margin"
-                    android:gravity="end">
+                    android:layout_toStartOf="@+id/btGameHuDialogOk"
+                    android:background="@android:color/transparent"
+                    android:text="@string/close"
+                    android:textColor="@color/colorAccent" />
 
-                    <Button
-                        android:id="@+id/btGameHuDialogCancel"
-                        style="@style/Widget.AppCompat.Button.Borderless"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/standard_margin"
-                        android:text="@string/cancel"
-                        android:textColor="@color/colorAccent" />
-
-                    <Button
-                        android:id="@+id/btGameHuDialogOk"
-                        style="@style/Widget.AppCompat.Button.Borderless"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/standard_margin"
-                        android:text="@string/ok"
-                        android:textColor="@color/colorAccent" />
-
-                </LinearLayout>
+                <Button
+                    android:id="@+id/btGameHuDialogOk"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/cnpGameHuDialog"
+                    android:layout_alignEnd="@+id/cdsGameHuDialog"
+                    android:layout_marginEnd="-26dp"
+                    android:layout_marginTop="@dimen/standard_margin"
+                    android:background="@android:color/transparent"
+                    android:text="@string/save" />
 
             </RelativeLayout>
 
