--- a/app/src/main/res/layout/game_table_seat_south.xml
+++ b/app/src/main/res/layout/game_table_seat_south.xml
@@ -82,7 +82,7 @@
         layout="@layout/game_table_seat_diffs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/tvTableSeatSouthName" />
+        android:layout_below="@+id/tvTableSeatSouthName"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
