--- a/app/src/main/res/layout/game_table_seat_west.xml
+++ b/app/src/main/res/layout/game_table_seat_west.xml
@@ -81,7 +81,7 @@
         layout="@layout/game_table_seat_diffs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/tvTableSeatWestName" />
+        android:layout_below="@+id/tvTableSeatWestName"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
