--- a/app/src/main/res/layout/game_action_dialog_diffs.xml
+++ b/app/src/main/res/layout/game_action_dialog_diffs.xml
@@ -49,8 +49,7 @@
 
     </TableRow>
 
-    <TableRow
-        android:id="@+id/trActionDialogDiffsSecond">
+    <TableRow android:id="@+id/trActionDialogDiffsSecond">
 
         <TextView
             style="@style/diffsDialogCell"
@@ -73,8 +72,7 @@
 
     </TableRow>
 
-    <TableRow
-        android:id="@+id/trActionDialogDiffsThird">
+    <TableRow android:id="@+id/trActionDialogDiffsThird">
 
         <TextView
             style="@style/diffsDialogCell"
