--- a/app/src/main/res/layout/table_seat_medium.xml
+++ b/app/src/main/res/layout/table_seat_medium.xml
@@ -5,9 +5,9 @@
     android:id="@+id/llTableSeatMediumContainer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/half_standard_margin"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/half_standard_margin">
 
     <ImageView
         android:id="@+id/ivTableSeatMediumSeatWind"
