--- a/app/src/main/res/menu/main_drawer_menu.xml
+++ b/app/src/main/res/menu/main_drawer_menu.xml
@@ -14,7 +14,8 @@
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:checkableBehavior="single">
 
@@ -28,6 +29,11 @@
             android:id="@+id/nav_combinations"
             android:icon="@drawable/ic_format_list_numbered_black_24dp"
             android:title="@string/combinations" />
+
+        <item
+            android:id="@+id/action_diffs_calculator"
+            android:icon="@drawable/ic_calc"
+            android:title="@string/diffsCalculator" />
 
         <item
             android:id="@+id/nav_greenbook_en"
