--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -156,4 +156,16 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="diffsCalculatorCell" parent="AppTheme">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">@dimen/quarter_standard_margin</item>
+        <item name="android:paddingBottom">@dimen/quarter_standard_margin</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/grayMM</item>
+    </style>
+
 </resources>
